minor fixes on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -23,8 +23,8 @@ button:focus {
 }
 
 #counters-section {
-  margin-left: 10vw;
-  margin-right: 10vw;
+  margin-left: 1rem;
+  margin-right: 1rem;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -68,6 +68,18 @@ button:focus {
   border-bottom: solid gold 1px;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 #counter-name-setter {
   display: flex;
   flex: 1 1 auto;
@@ -75,7 +87,7 @@ button:focus {
 }
 
 #counter-count-setter {
-  width: 10%;
+  width: 5rem;
 }
 
 #create-counter-btn {
@@ -93,7 +105,7 @@ button:focus {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  overflow-y: auto;
+  overflow: auto;
   height: 1px;
 }
 
@@ -106,15 +118,18 @@ button:focus {
 
 .counter {
   display: flex;
-  flex: 1 1 auto;
+  align-items: center;
+  /* flex-grow: 1; */
+
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  align-items: center;
+
   color: white;
   border-radius: 1rem;
-  min-height: 2rem;
+  height: 2rem;
+  min-width: 0;
 }
 
 .counter-anim-appear {
@@ -148,20 +163,22 @@ button:focus {
   transition: opacity 200ms;
 }
 
-.counter * {
-  user-select: none;
-}
-
 .counter-name {
   padding-left: 1rem;
   padding-right: 1rem;
   text-align: start;
-  flex-grow: 1;
+  flex: 1 1 auto;
 
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  min-width: 0px;
+}
+
+.counter-drag-handle {
+  height: 150%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .counter-main {
@@ -199,4 +216,18 @@ button:focus {
   color: white;
   font-size: 12px;
   padding: 0.3rem;
+}
+
+@media only screen and (min-width: 426px) {
+  #counters-section {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+  #counters-section {
+    margin-left: 25vw;
+    margin-right: 25vw;
+  }
 }
